# covid-19-pipeline-elt-dbt-postgres

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
covid_19_study/: .user.yml  dbt_project.yml  profiles.yml
covid_19_study/models/covid_19/marts/: dim_daily_cases.sql  dim_daily_cases.yml  dim_states_and_territories.sql  dim_states_and_territories.yml  fct_state_daily_cases.sql  fct_state_daily_cases.yml  fct_state_daily_percent_infected.sql  fct_state_daily_percent_infected.yml
covid_19_study/models/covid_19/staging/: sources.yml  stg_daily_cases.sql  stg_state_daily_cases.sql  stg_states_and_territories.sql
covid_19_study/tests/: validate_daily_cases_sum.sql
scripts/: covid_data_ingestion.py  date_range.py  export_state_summary.py
scripts/outputs/: ak.csv  al.csv  ar.csv  az.csv  ca.csv  co.csv  ct.csv  dc.csv  de.csv  fl.csv  ga.csv  hi.csv  ia.csv  id.csv  il.csv  in.csv  ks.csv  ky.csv  la.csv  ma.csv  md.csv  me.csv  mi.csv  mn.csv  mo.csv  ms.csv  mt.csv  nc.csv  nd.csv  ne.csv  nh.csv  nj.csv  nm.csv  nv.csv  ny.csv  oh.csv  ok.csv  or.csv  pa.csv  ri.csv  (+11 more)
